--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "intro-to-react",
   "version": "0.1.0",
-  "homepage": "http://dyaditsyn.github.io/intro-to-react",
+  "homepage": "https://dyaditsyn.github.io/intro-to-react",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
